Bug 915301: Prevent MPassArg from receiving a Float32 as an input; r=terrence